fix(studio): select dropdown overflowing modals did not render properly - fixes #137 (#155)
https://linear.app/botpress/issue/DEV-1900/[bug]-cant-see-all-actions-from-the-dropdown-list-when-inspecting

--- a/packages/studio-ui/src/web/theme.scss
+++ b/packages/studio-ui/src/web/theme.scss
@@ -190,3 +190,7 @@ b {
 :global(.bp3-tooltip .bp3-popover-content) {
   padding: 5px 8px !important;
 }
+
+:global(#menuOverlayPortal > div) {
+  z-index: 100;
+}
